syntax = "proto3";

package chat_api_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/drewspitsin/chat-server/pkg/chat_api_v1;chat_api_v1";

service ChatV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc SendMessage(SendRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
    string username = 1;
    string msg = 2;
}

message CreateResponse {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message SendRequest {
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
}